<resources>
    <string name="heart">Heart</string>
    <string name="welcome_to_heart">Welcome to Heart</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="type_your_question">Type your Question</string>
    <string name="button">Button</string>
    <string name="start">start</string>
    <string name="Username">Username</string>
    <string name="Login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have An Account</string>
    <string name="signup_your_account">Signup Your Account</string>
    <string name="Name">name</string>
    <string name="phone_number">phone number</string>
    <string name="signup">SignUp</string>
    <string name="Phone_number">phone_number</string>
    <string name="email">email</string>
    <string name="gender">gender</string>
    <string name="check_heart_disease">Check Heart Disease</string>
    <string name="check">Check</string>
    <string name="check_cholesterol">Check Cholesterol</string>
    <string name="chat_to_heart">Chat to Heart</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="textview">TextView</string>
    <string name="send">send</string>
    <string name="chat_to">Chat To</string>

</resources>