<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_page">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="170dp"
        android:layout_height="135dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/doctor1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:text="@string/heart"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="285dp"
        android:layout_height="84dp"
        android:layout_marginTop="28dp"
        android:text="@string/login_to_your_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/input_shape"
        android:ems="20"
        android:hint="@string/Username"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_shape"
        android:ems="20"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />


    <TextView
        android:id="@+id/notHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/LoginButton"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="@+id/LoginButton"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/shape"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>