<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gragment.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView16"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/input_shape"
        android:padding="15dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_shape"
        android:padding="15dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_shape"
        android:padding="15dp"
        android:text="@string/Phone_number"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_shape"
        android:padding="15dp"
        android:text="@string/gender"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="221dp"
        android:layout_height="722dp"
        android:src="@drawable/stand_doctor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="148dp"
        android:layout_height="108dp"
        android:layout_marginTop="96dp"
        android:src="@drawable/pro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="92dp"
        android:layout_height="41dp"
        android:layout_marginTop="280dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>