<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gragment.ChatFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView11"
        android:layout_width="132dp"
        android:layout_height="44dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="92dp"
        android:text="@string/chat_to"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="352dp"
        android:layout_height="62dp"
        android:layout_marginBottom="112dp"
        android:autofillHints=""
        android:background="@drawable/input_shape"
        android:ems="20"
        android:hint="@string/type_your_question"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,VisualLintOverlap" />

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="604dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/textview" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/send2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="209dp"
        android:layout_height="138dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>